[package]
name = "base-station-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
# embedded-nrf24l01 = { git = "https://github.com/N8BWert/embedded-nrf24l01.git" }

[dependencies.rppal]
version = "0.14.1"

[dependencies.tokio]
version = "1.32.0"
features = ["full"]