[package]
name = "base-station-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
sx127 = { git = "https://github.com/N8BWert/sx127" }
embedded-hal = "0.2.7"
bitfield-struct = "0.5.4"

[dependencies.rppal]
version = "0.14.1"
features = ["hal"]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]
